added talking points and contact pages. added an image and updated the services page.

--- a/LS-services.html
+++ b/LS-services.html
@@ -125,16 +125,17 @@ p { text-align: center; font-family: Tw Cen MT; }
      <div class="flip-card-back">
       <h1>Executive Functions</h1>
       <div class="cardcenter">
-       <p style="text-align: justify; font-size:20px">David is 11 and likes soccer and science.
-At school he enjoys hands-on learning, but he struggles with writing 
-assignments.  His parents sought help after a book report turned the family 
-upside down.  Overall, his spoken language skills were fairly strong, but 
-his executive functions were quite challenged:  He had trouble organizing his 
-school materials and keeping track of his assignments.  In therapy, we found 
-a graphic organizer that helped David get started with his writing.  He 
-learned to use a custom checklist to edit his work.  With incentives, he 
-began to practice strategies for homework tracking and now he also learning 
-to use a visual aid to stay on task when getting ready for school. </p>
+       <p style="text-align: justify; font-size:20px">David is 11 and 
+likes soccer and science. At school he enjoys hands-on learning, but he 
+struggles with writing assignments. His parents sought help after a book 
+report turned the family upside down. Overall, his spoken language skills 
+were fairly strong, but his executive functions were quite challenged: 
+He had trouble organizing his school materials and keeping track of his 
+assignments. In therapy, we found a graphic organizer that helped David 
+get started with his writing. He learned to use a custom checklist to 
+edit his work. With incentives, he began to practice strategies for 
+homework tracking and now he is also learning to use a visual aid to 
+stay on task when getting ready for school.</p>
       </div>
      </div>
     </div>
