added corona content to talking point and added target="_blank" to all links to launch links in new window/tab

--- a/LS-talking-points.html
+++ b/LS-talking-points.html
@@ -77,6 +77,35 @@ p { text-align: center; font-family: Tw Cen MT; padding: 15px; }
   <a href="LS-talking-points.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Talking Points</a>
   <a href="LS-lets-talk.html" class="w3-bar-item w3-mobile w3-button w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:32px; width:16.6%">Let's Talk</a>
 </div>
+<button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Language Strides Responds to the Coronavirus</button>
+<div class="content">
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+In March 2020, Virginia&apos;s governor announced an executive order to help 
+reduce the transmission of the novel Coronavirus. Virginians were asked, 
+among other things, to remain at home except to receive or provide essential 
+services or to obtain essential supplies such as groceries. With the
+guidance and support of the American Speech-Language-Association, 
+Language Strides quickly pivoted alongside many other speech-language 
+pathology practices to <a href="https://www.asha.org/uploadedFiles/ASHA/Practice_Portal/Professional_Issues/Telepractice/Telepractice-for-Speech-and-Hearing-Services-Brochure.pdf">provide services through telepractice</a>.
+This enabled clients to continue working toward their goals during this
+extended period away from community exposure. Andrea engaged in professional 
+development programs to strengthen her telepractice skills, adapted therapy 
+materials for online presentation, and took a refresher course in infection 
+control.<br>
+<br>
+Until we have a vaccine to protect us from the rampant spread of the 
+Coronavirus, we&apos;ll all need to take precautions in order to protect 
+the health of the community. The decision to welcome a professional into 
+your home for speech-language therapy is a personal one. We must combine what
+we know of the science of epidemiology with our own family&apos;s specific 
+health needs to arrive at our own individual level of tolerance for risk. As 
+restrictions are lifted, some of Language Strides&apos; clients have begun 
+to receive services in their homes again, while others have chosen to 
+continue receiving services through telepractice. Talk with Andrea about 
+your concerns and learn about Language Strides&apos; policies and 
+precautions in order to decide what&apos;s right for you.
+  </p>
+</div> 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Does my child need a Speech Language Pathologist&quest;</button>
 <div class="content" >
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">The American 
@@ -86,9 +115,9 @@ looking at an individual&apos;s development, it may be helpful to consider
 whether his or her communication abilities support age-appropriate 
 interactions, or whether interactions result in frustration.
 <br>
-<a href="https://www.asha.org/public/speech/development/chart/"> Speech and Language Development from Birth to Age 5</a> 
+<a href="https://www.asha.org/public/speech/development/chart/" target="_blank"> Speech and Language Development from Birth to Age 5</a> 
 <br>
-<a href="https://www.asha.org/public/speech/development/communicationdevelopment/">Speech and Language Development in the Elementary Years</a>
+<a href="https://www.asha.org/public/speech/development/communicationdevelopment/" target="_blank">Speech and Language Development in the Elementary Years</a>
   </p>
 </div> 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Well, she was a late-talker, so</button>
@@ -98,15 +127,15 @@ Longitudinal studies tell us that being a late talker at 24 months increases
 a child&apos;s risk of having a low vocabulary at 48 months and predicts a 
 later age for school-readiness than typically developing children.
 <br>
-<a href="https://www.asha.org/public/speech/disorders/Late-Blooming-or-Language-Problem/">Late-Blooming or Language Problem&quest;</a></p>
+<a href="https://www.asha.org/public/speech/disorders/Late-Blooming-or-Language-Problem/" target="_blank">Late-Blooming or Language Problem&quest;</a></p>
 </div> 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >More Online Resources</button>
 <div class="content">
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
-  <a href="https://www.readingrockets.org/helping">Reading Rockets </a><br>
-  <a href="https://www.additudemag.com/">ADDitude: Inside the ADHD Mind </a><br>
+  <a href="https://www.readingrockets.org/helping" target="_blank">Reading Rockets </a><br>
+  <a href="https://www.additudemag.com/" target="_blank">ADDitude: Inside the ADHD Mind </a><br>
 
-<a href="https://www.understood.org/pages/en/families/podcast-init/">Understood.org - In It: A Podcast on Raising Kids Who Learn and Think Differently</a>
+<a href="https://www.understood.org/pages/en/families/podcast-init/" target="_blank">Understood.org - In It: A Podcast on Raising Kids Who Learn and Think Differently</a>
   </p>
 </div> 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Children don&apos;t come with instruction books.</button>
@@ -134,7 +163,7 @@ book say&quest; Here are a few words from my own.
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Read with Me: Your best partner in language growth is a book.</button>
 <div class="content">
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
-  <a href="https://1000booksbeforekindergarten.org/"><img src="Images/1000_books_logo.png" alt="1000 Books Logo" style="float: right; margin-left:50px; width: 15%;"></a><br>
+  <a href="https://1000booksbeforekindergarten.org/" target="_blank"><img src="Images/1000_books_logo.png" alt="1000 Books Logo" style="float: right; margin-left:50px; width: 15%;"></a><br>
 Perhaps you&apos;ve seen the signs at your local library: 1,000 books before
 Kindergarten. That sounds like a lot! Well, is it, really If you read
 just one bedtime story a night for a year, you&apos;ll have read 365 books.
@@ -228,12 +257,12 @@ successfully using her words to communicate.
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Local Resources</button>
 <div class="content">
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
- <a href="https://www.progressivepediatrics.net/services">Physical, Occupational, and Art Therapy</a><br>
- <a href="https://www.mindwell.us/">PsychoEducational Testing and Child Psychology</a><br>
- <a href="https://www.themusicloftonline.com/">Make Room for Music</a><br>
- <a href="https://www.fairfaxcounty.gov/library/events">Find a Story Time at your local library</a><br>
- <a href="https://www.fairfaxcounty.gov/parks/frying-pan-park/events">Events and Programs for children and families at Frying Pan Farm Park</a><br>
- <a href="https://www.reston.org/Parks,RecreationEvents/NatureEnvironmentalResources/WalkerNatureCenter/WalkerNatureCenterOverview/tabid/178/Default.aspx">Walker Nature Center</a><br>
+ <a href="https://www.progressivepediatrics.net/services" target="_blank">Physical, Occupational, and Art Therapy</a><br>
+ <a href="https://www.mindwell.us/" target="_blank">PsychoEducational Testing and Child Psychology</a><br>
+ <a href="https://www.themusicloftonline.com/" target="_blank">Make Room for Music</a><br>
+ <a href="https://www.fairfaxcounty.gov/library/events" target="_blank">Find a Story Time at your local library</a><br>
+ <a href="https://www.fairfaxcounty.gov/parks/frying-pan-park/events" target="_blank">Events and Programs for children and families at Frying Pan Farm Park</a><br>
+ <a href="https://www.reston.org/Parks,RecreationEvents/NatureEnvironmentalResources/WalkerNatureCenter/WalkerNatureCenterOverview/tabid/178/Default.aspx" target="_blank">Walker Nature Center</a><br>
   </p>
 </div> 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Mighty Moms Need Support! </button>
