--- a/LS-community.html
+++ b/LS-community.html
@@ -32,35 +32,9 @@ p { text-align: center; font-family: Tw Cen MT; }
 </div>
 
 <p  style="margin-right: 60px; margin-left: 60px; font-size:80px;">
-<img src="Images/Andrea_ASHA-CCC-SLP.jpg" alt="Andrea" style="float: right; marg
-in-left:60px; width: 25%;">
+<img src="Images/Andrea_ASHA-CCC-SLP.jpg" alt="Andrea" style="float: right; margin-left:60px; width: 900px; height: 600px ">
 Meet the Mighty Ones
 </p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <p  style="text-align: justify; margin-right: 60px; margin-left: 60px; font-size:26px;">
 No less than one sixth of Language Strides LLC&apos;s services are provided 
 free or at reduced rates to local families in financial need. The Mighty 
@@ -69,15 +43,16 @@ who are determined to learn.
 </p>
 <p  style="text-align: justify; margin-right: 60px; margin-left: 60px; font-size:26px;">
 Physician and community referrals are thanked with a donation to 
-<a href="https://www.cornerstonesva.org/">Cornerstones</a>, a nonprofit 
+<a href="https://www.cornerstonesva.org/" target="_blank">Cornerstones</a>, a nonprofit 
 organization in Reston, Virginia. Cornerstones 
 promotes self-sufficiency by providing support and advocacy for those in 
 need of food, shelter, affordable housing, quality childcare, and other 
 human services.
 </p>
-
-
-
+<br>
+<br>
+<br>
+<br>
 <p style="text-align: center; font-size:30px; ">Language Strides LLC proudly serves the communities of Reston and Herndon, Virginia and the surrounding area.</p>
 
 </body>
