Added new content

--- a/LS-talking-points.html
+++ b/LS-talking-points.html
@@ -135,7 +135,8 @@ later age for school-readiness than typically developing children.
   <a href="https://www.readingrockets.org/helping" target="_blank">Reading Rockets </a><br>
   <a href="https://www.additudemag.com/" target="_blank">ADDitude: Inside the ADHD Mind </a><br>
 
-<a href="https://www.understood.org/pages/en/families/podcast-init/" target="_blank">Understood.org - In It: A Podcast on Raising Kids Who Learn and Think Differently</a>
+  <a href="https://www.understood.org/pages/en/families/podcast-init/" target="_blank">Understood.org - In It: A Podcast on Raising Kids Who Learn and Think Differently</a><br>
+<a href="https://www.understood.org/en/through-your-childs-eyes" target="_blank">Through Your Child&apos;s Eyes: Simulations of learning differences</a>
   </p>
 </div> 
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Children don&apos;t come with instruction books.</button>
@@ -265,6 +266,57 @@ successfully using her words to communicate.
  <a href="https://www.reston.org/Parks,RecreationEvents/NatureEnvironmentalResources/WalkerNatureCenter/WalkerNatureCenterOverview/tabid/178/Default.aspx" target="_blank">Walker Nature Center</a><br>
   </p>
 </div> 
+
+<button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >The Most Wonderful Time of the Year - Back to School with special learning needs </button>
+<div class="content">
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+Every summer, when the stores stock up on back-to-school supplies, I get that
+song stuck in my head again. It&apos;s the most wonderful time of the
+year! What does a holiday song have to do with back-to-school shopping 
+Many years ago, an office supply store launched tv ad for school supplies in
+July. The ad featured a dad dancing with glee as he tossed staplers and pencil
+sharpeners into his cart while his children sulked. This left quite an
+impression!
+</p>
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+The back-to-school season brings on happy anticipation for many families. 
+We get the new, bigger clothes, the fresh box of crayons, the new lunch bag 
+and backpack, sometimes even a new hairstyle. And then they hop on the bus, 
+and soon meet a new teacher in a new room. There&apos;s a new way for the 
+desks to be arranged, a new set of classroom procedures, a new group of kids 
+to sit with during lunchtime, and a chance to make a new impression with 
+friends and teachers.
+</p>
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+Some of my readers just got a giddy, tingly feeling all over, and others just
+cringed. Ask me how I know. If you are one of the readers who cringed
+and felt a quickening of your heart rate, please know that you are not alone.
+In fact, you&apos;re in really good company.
+</p>
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+If you&apos;ve been getting the feeling that your child&apos;s speech, 
+language, and learning needs are under-served at school, there are several 
+avenues to pursue. A first step is to conference with your child&apos;s 
+teachers and work out an informal plan to team up in support of your child.
+You can request an evaluation and seek support services at your neighborhood 
+public school, even if your child does not attend public school. You can 
+seek private evaluations and supplement school services with therapy or 
+tutoring. You can consider your family&apos;s resources and examine private 
+school and home school options.
+</p>
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+Ultimately, each family has its own journey. Lots of people will have opinions,
+but parents are uniquely empowered to figure out what&apos;s best for their
+families.
+</p>
+<br>
+  <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+  <a href="https://heav.org/begin-homeschooling/how-to-start-homeschooling-in-virginia/" target="_blank">How to start homeschoolingin Virginia</a><br>
+  <a href="https://www.privateschoolreview.com/blog/category/why-private-school" target="_blank">An introduction to privateschool education</a><br>
+<a href="https://www.understood.org/en/school-learning/special-services/ieps/what-is-an-iep" target="_blank">What is an IndividualizedEducation Plan&quest;</a>
+  </p>
+</div> 
+
 <button type="button" class="collapsible w3-hover-pale-blue" style="font-family: Tw Cen MT; font-size:24px; color: #eee" >Mighty Moms Need Support! </button>
 <div class="content">
 <h2 style="font-weight: bold"> Caring for the one who holds it all together </h2>
