updated points and fixed minor issues. added images

--- a/LS-talking-points.html
+++ b/LS-talking-points.html
@@ -97,12 +97,12 @@ Until we have a vaccine to protect us from the rampant spread of the
 Coronavirus, we&apos;ll all need to take precautions in order to protect 
 the health of the community. The decision to welcome a professional into 
 your home for speech-language therapy is a personal one. We must combine what
-we know of the science of epidemiology with our own family&apos;s specific 
-health needs to arrive at our own individual level of tolerance for risk. As 
-restrictions are lifted, some of Language Strides&apos; clients have begun 
-to receive services in their homes again, while others have chosen to 
-continue receiving services through telepractice. Talk with Andrea about 
-your concerns and learn about Language Strides&apos; policies and 
+we know of the current state of the pandemic with our own family&apos;s 
+specific health needs to arrive at our own individual level of tolerance for 
+risk. As restrictions are reduced, some of Language Strides&apos; clients 
+are beginning to receive services in their homes again, while others have 
+chosen to continue receiving services through telepractice. Talk with Andrea 
+about your concerns and learn about Language Strides&apos; policies and 
 precautions in order to decide what&apos;s right for you.
   </p>
 </div> 
@@ -153,11 +153,32 @@ Children don&apos;t come with instruction books. There are times,
 though, when a few guidelines wouldn&apos;t hurt. What would your instruction
 book say&quest; Here are a few words from my own. 
 <ul>
+  <img src="Images/nora_woods_path1.jpg" alt="Andrea and Nora" style="float: left; margin-right:40px; width: 530px; height: 635px ">
   <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">Breathe in. Breathe out. Repeat. You&apos;ve got this.</li>
-  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">Not every day will be your best day, but every day will be the best you can do that day. This little person already thinks you&apos;re pretty great</li>
-  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">Go with your gut. That nagging feeling that what&apos;s working for the others just isn&apos;t working for your child. Trust it. Let your intuition guide you to seek solutions when something&apos;s just not right.</li>
-  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">It takes a village to raise a child. This African proverb is a reminder that there are others who contribute to the lives of our children. A secure parent-child relationship lays a foundation for a lifetime of growth, but we can not underestimate the value of the rest of the community: Cousins, aunties, fire fighters, teachers, mail carriers, passers-by. Our children can learn from all of them, just as we can.</li>
-  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">Put your phone or tablet in time out. Those precious after school hours are loaded with things to do before we turn in at the end of the day. The outside world has squeezed its way into our homes and even joined many families at the dinner table. Our children look to us to learn the nuances of communication. A responsive parent spends more time looking at his or her children than at electronic or other devices. Children learn about secure attachment and reciprocal communication from caregivers who are actively engaged with them. Children go to bed early. The text messages, emails, and social media can wait.</li>
+  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">Not 
+every day will be your best day, but every day will be the best you can do 
+that day. This little person already thinks you&apos;re pretty great.</li>
+  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">Go 
+with your gut. That nagging feeling that what&apos;s working for the others 
+just isn&apos;t working for your child&quest; Trust it. Let your intuition 
+guide you to seek solutions when something&apos;s just not right.</li>
+  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">It 
+takes a village to raise a child. This African proverb is a reminder that 
+there are others who contribute to the lives of our children. A secure 
+parent-child relationship lays a foundation for a lifetime of growth, but we 
+can not underestimate the value of the rest of the community: Cousins, aunties, 
+fire fighters, teachers, mail carriers, passers-by. Our children can learn 
+from all of them, just as we can.</li>
+  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
+Put your phone or tablet in time out. Those precious after school hours are 
+loaded with things to do before we turn in at the end of the day. The outside 
+world has squeezed its way into our homes and even joined many families at 
+the dinner table. Our children look to us to learn the nuances of 
+communication. A responsive parent spends more time looking at his or her 
+children than at electronic or other devices. Children learn about secure 
+attachment and reciprocal communication from caregivers who are actively 
+engaged with them. Children go to bed early. The text messages, emails, and 
+social media can wait.</li>
 </ul>
   </p>
 </div> 
@@ -166,15 +187,16 @@ book say&quest; Here are a few words from my own.
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
   <a href="https://1000booksbeforekindergarten.org/" target="_blank"><img src="Images/1000_books_logo.png" alt="1000 Books Logo" style="float: right; margin-left:50px; width: 15%;"></a><br>
 Perhaps you&apos;ve seen the signs at your local library: 1,000 books before
-Kindergarten. That sounds like a lot! Well, is it, really If you read
-just one bedtime story a night for a year, you&apos;ll have read 365 books.
+Kindergarten. That sounds like a lot! Well, is it, really&quest; If you read
+just one bedtime story a night, in a year you will have read 365 books.
 Babies will enjoy cuddling in your lap, listening to your voice, and holding
 board books just as soon as you're ready to start a naptime and bedtime
 schedule. That bedtime story quickly becomes a cherished part of the daily
 routine for both children and parents. Eventually children become readers
-themselves, but that&apos;s no time to give up on reading together. Keep up your
-streak! That shared reading time is pretty powerful. Keep it going and reap
-the rewards:
+themselves, but that&apos;s no time to give up on reading together. Keep up 
+your streak! That shared reading time is pretty powerful. Keep it going and 
+reap the rewards:
+  </p>
 <ol>
  <li style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 A regular routine time for reading provides structure and security for young
@@ -271,12 +293,12 @@ successfully using her words to communicate.
 <div class="content">
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 Every summer, when the stores stock up on back-to-school supplies, I get that
-song stuck in my head again. It&apos;s the most wonderful time of the
-year! What does a holiday song have to do with back-to-school shopping 
-Many years ago, an office supply store launched tv ad for school supplies in
-July. The ad featured a dad dancing with glee as he tossed staplers and pencil
-sharpeners into his cart while his children sulked. This left quite an
-impression!
+song stuck in my head again. &quot;It&apos;s the most wonderful time of the
+year!&quot; What does a holiday song have to do with back-to-school 
+shopping&quest; Many years ago, an office supply store launched a tv ad for 
+school supplies in July. The ad featured a dad dancing with glee as he 
+tossed staplers and pencil sharpeners into his cart while his children 
+sulked. This left quite an impression!
 </p>
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 The back-to-school season brings on happy anticipation for many families. 
@@ -295,14 +317,14 @@ In fact, you&apos;re in really good company.
 </p>
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 If you&apos;ve been getting the feeling that your child&apos;s speech, 
-language, and learning needs are under-served at school, there are several 
-avenues to pursue. A first step is to conference with your child&apos;s 
-teachers and work out an informal plan to team up in support of your child.
-You can request an evaluation and seek support services at your neighborhood 
-public school, even if your child does not attend public school. You can 
-seek private evaluations and supplement school services with therapy or 
-tutoring. You can consider your family&apos;s resources and examine private 
-school and home school options.
+language, and learning needs are under-served where he does his learning, 
+there are several avenues to pursue. A first step is to conference with 
+your child&apos;s teachers and work out an informal plan to team up in 
+support of your child. You can request an evaluation and seek support 
+services at your neighborhood public school, even if your child does not 
+attend public school. You can seek private evaluations and supplement 
+school services with therapy or tutoring. You can consider your 
+family&apos;s resources and examine private school and home school options.
 </p>
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
 Ultimately, each family has its own journey. Lots of people will have opinions,
@@ -311,9 +333,9 @@ families.
 </p>
 <br>
   <p style="text-align: justify; font-family: Tw Cen MT; font-size:24px">
-  <a href="https://heav.org/begin-homeschooling/how-to-start-homeschooling-in-virginia/" target="_blank">How to start homeschoolingin Virginia</a><br>
-  <a href="https://www.privateschoolreview.com/blog/category/why-private-school" target="_blank">An introduction to privateschool education</a><br>
-<a href="https://www.understood.org/en/school-learning/special-services/ieps/what-is-an-iep" target="_blank">What is an IndividualizedEducation Plan&quest;</a>
+  <a href="https://heav.org/begin-homeschooling/how-to-start-homeschooling-in-virginia/" target="_blank">How to start homeschooling in Virginia</a><br>
+  <a href="https://www.privateschoolreview.com/blog/category/why-private-school" target="_blank">An introduction to private school education</a><br>
+<a href="https://www.understood.org/en/school-learning/special-services/ieps/what-is-an-iep" target="_blank">What is an Individualized Education Plan&quest;</a>
   </p>
 </div> 
 
