minor changes to services and community for image aspect ratio added flipping circle to talking points. need to add more circles and line them up - todo

--- a/LS-community.html
+++ b/LS-community.html
@@ -32,7 +32,7 @@ p { text-align: center; font-family: Tw Cen MT; }
 </div>
 
 <p  style="margin-right: 60px; margin-left: 60px; font-size:80px;">
-<img src="Images/InTheCommunityCropped.jpg" alt="Andrea and Nora" style="float: right; margin-left:60px; width: 900px; height: 600px ">
+<img src="Images/InTheCommunityCropped.jpg" alt="Andrea and Nora" style="float: right; margin-left:60px; width: 788px">
 Meet the Mighty Ones
 </p>
 <p  style="text-align: justify; margin-right: 60px; margin-left: 60px; font-size:26px;">
