--- a/LS-services.html
+++ b/LS-services.html
@@ -40,7 +40,6 @@ p { text-align: center; font-family: Tw Cen MT; }
 }
 
 .flip-card-front {
-  background-color: #bbb;
   color: black;
 }
 
@@ -120,7 +119,7 @@ p { text-align: center; font-family: Tw Cen MT; }
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
-      <img src="Images/boy-in-black-shirt.jpg" alt="Boy in Black Shirt" style="width:500px;height:500px;">
+      <img src="Images/boy-in-black-shirt.jpg" alt="Boy in Black Shirt" style="width:400px">
      </div>
      <div class="flip-card-back">
       <h1>Executive Functions</h1>
@@ -147,7 +146,7 @@ stay on task when getting ready for school.</p>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
-      <img src="Images/girl-wearing-blue-sweater.jpg" alt="Girl Wearing Blue Sweater" style="width:500px;height:500px;">
+      <img src="Images/girl-wearing-blue-sweater.jpg" alt="Girl Wearing Blue Sweater" style="height:500px">
      </div>
      <div class="flip-card-back">
       <h1>Grammar and vocabulary</h1>
@@ -180,7 +179,7 @@ the growing demands of her schoolwork.</p>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
-      <img src="Images/diligent-small-girl.jpg" alt="Diligent Small Girl" style="width:500px;height:500px;">
+      <img src="Images/diligent-small-girl.jpg" alt="Diligent Small Girl" style="width:500px; padding: 90px 0">
      </div>
      <div class="flip-card-back">
       <h1>Reading and Pre-Reading Skills</h1>
@@ -203,7 +202,7 @@ so she could get help at school.</p>
    <div class="flip-card">
     <div class="flip-card-inner">
      <div class="flip-card-front">
-      <img src="Images/boy-reading-a-book.jpg" alt="Boy Reading A Book" style="width:500px;height:500px;">
+      <img src="Images/boy-reading-a-book.jpg" alt="Boy Reading A Book" style="width:500px; padding: 90px 0">
      </div>
      <div class="flip-card-back">
       <h1>Articulation</h1>
@@ -227,7 +226,7 @@ school and in play dates.</p>
 <div class="center" style="width: 40%">
  <div class="flip-card" style="width: 800px;height: 410px;">
   <div class="flip-card-inner">
-   <div style="background-color: #2980b9" class="flip-card-front">
+   <div class="flip-card-front">
     <div class="container">
      <img src="Images/InserviceFolder.jpg" alt="Workshop Folder" style="width:500px;height:410px;">
    </div>
